test/error/OpAddAssignStringObjectStg.ci
public class Test
{
	public static bool Run()
	{
		Test() o;
		string() s = "o=";
		// FIXME:
		s += o; //ERROR: Cannot coerce  to printable
		return true;
	}
}
